--- a/Downloads/flutter_playground_booking_app/pubspec.yaml
+++ b/Downloads/flutter_playground_booking_app/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_rating_bar:
   image_picker:
   http: ^1.2.2
+  geolocator: ^12.0.0
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
