--- a/Downloads/flutter_playground_booking_app/pubspec.yaml
+++ b/Downloads/flutter_playground_booking_app/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   image_picker:
   http: ^1.2.2
   geolocator: ^12.0.0
+  geocoding: ^3.0.0
+  permission_handler: ^11.3.1
+  flutter_map_math: ^0.1.7
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
