--- a/Downloads/flutter_playground_booking_app/android/app/src/main/AndroidManifest.xml
+++ b/Downloads/flutter_playground_booking_app/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,18 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+                <data android:scheme="tel" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW"/>
+                <data android:scheme="sms"/>
+        </intent>
+    </queries>
     <application
         android:label="flutter_playground_booking_app"
         android:icon="@mipmap/ic_launcher">
@@ -40,10 +51,35 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        
+        <!-- <queries>
+  <intent>
+    <action android:name="android.intent.action.VIEW" />
+    <data android:scheme="tel" />
+  </intent>
+</queries> -->
+        <!-- Provide required visibility configuration for API level 30 and above -->
+<!-- <queries> -->
+  <!-- If your app checks for SMS support -->
+  <!-- <intent>
+    <action android:name="android.intent.action.VIEW" />
+    <data android:scheme="sms" />
+  </intent> -->
+  <!-- If your app checks for call support -->
+  <!-- <intent>
+    <action android:name="android.intent.action.VIEW" />
+    <data android:scheme="tel" />
+  </intent> -->
+  <!-- If your application checks for inAppBrowserView launch mode support -->
+  <!-- <intent>
+    <action android:name="android.support.customtabs.action.CustomTabsService" />
+  </intent> -->
+<!-- </queries> -->
     </application>
 </manifest>
