--- a/Downloads/flutter_playground_booking_app/pubspec.yaml
+++ b/Downloads/flutter_playground_booking_app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   geocoding: ^3.0.0
   permission_handler: ^11.3.1
   flutter_map_math: ^0.1.7
+  url_launcher: ^6.3.0
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
