--- a/Downloads/flutter_playground_booking_app/pubspec.yaml
+++ b/Downloads/flutter_playground_booking_app/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   geocoding: ^3.0.0
   permission_handler: ^11.3.1
   flutter_map_math: ^0.1.7
+  # flutter_map_math: ^1.0.0
   url_launcher: ^6.3.0
+  loading_animation_widget: ^1.2.1
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
