--- a/Downloads/flutter_playground_booking_app/android/app/src/main/AndroidManifest.xml
+++ b/Downloads/flutter_playground_booking_app/android/app/src/main/AndroidManifest.xml
@@ -12,16 +12,45 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <queries>
+    <!-- <queries>
         <intent>
             <action android:name="android.intent.action.VIEW" />
                 <data android:scheme="tel" />
         </intent>
         <intent>
             <action android:name="android.intent.action.VIEW"/>
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="http" />
+        <data android:scheme="https" />
                 <data android:scheme="sms"/>
         </intent>
-    </queries>
+    </queries> -->
+    <queries>
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="tel" />
+    </intent>
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="http" />
+    </intent>
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="https" />
+    </intent>
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="sms" />
+    </intent>
+</queries>
+
     <application
         android:label="flutter_playground_booking_app"
         android:icon="@mipmap/ic_launcher">
@@ -48,6 +77,7 @@
                  Flutter's first frame. -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -58,28 +88,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         
-        <!-- <queries>
-  <intent>
-    <action android:name="android.intent.action.VIEW" />
-    <data android:scheme="tel" />
-  </intent>
-</queries> -->
-        <!-- Provide required visibility configuration for API level 30 and above -->
-<!-- <queries> -->
-  <!-- If your app checks for SMS support -->
-  <!-- <intent>
-    <action android:name="android.intent.action.VIEW" />
-    <data android:scheme="sms" />
-  </intent> -->
-  <!-- If your app checks for call support -->
-  <!-- <intent>
-    <action android:name="android.intent.action.VIEW" />
-    <data android:scheme="tel" />
-  </intent> -->
-  <!-- If your application checks for inAppBrowserView launch mode support -->
-  <!-- <intent>
-    <action android:name="android.support.customtabs.action.CustomTabsService" />
-  </intent> -->
-<!-- </queries> -->
+
     </application>
 </manifest>
