--- a/Downloads/flutter_playground_booking_app/pubspec.yaml
+++ b/Downloads/flutter_playground_booking_app/pubspec.yaml
@@ -29,9 +29,10 @@ dependencies:
   geocoding: ^3.0.0
   permission_handler: ^11.3.1
   flutter_map_math: ^0.1.7
-  # flutter_map_math: ^1.0.0
   url_launcher: ^6.3.0
   loading_animation_widget: ^1.2.1
+  firebase_core: ^2.24.2
+  firebase_messaging: ^14.7.10
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
